Start moving to approval testing from alfa-beta.